   + Add binutils-2.21.51.0.4 and gcc-4.4.5 for kernel 2.6.28
  * target-toolchain:
   + Add gcc-4.5.2 and gcc-4.4.5(default), delete outdated versions
   + Bump binutils version to 2.21.51.0.4
   + Add uClibc-0.9.30.3 and uClibc-0.9.31 (experimental)
   + Add gdb-6.8, delete outdated versions
   + Update download toolchains to gcc-3.4.6 (kernel) and gcc-4.4.5 (target)
   + Update sys/queue.h in uClibc-0.9.28 toolchains
   + Enable mips-plt optimizations for gcc versions >= 4.4. These optimizations
     allow gcc to create binaries which are significantly smaller in size.
   + Add option to build uClibc with a reduced set of locales (saves > 200 KB)
   + Remove many unused symbols from libgcc_s (saves ~ 100 KB)
  * Bump squashfs3 version to 3.4
  * patch-system: use shell-fuction isFreetzType (by kriegaex)
  * replace tar with busybox tar
  * patch-system: use shell function modsed
  * move packages and libs source dir to source/target-$(arch)_uClibc-$(version)
   * move config.cache to this subdir too
  * move tools source dir to source/host-tools

- New tools and hooks:
    * Add patch that enhances possibilities of /bin/onlinechanged:
      Based on changes by AVM we execute 3 locations on a call to /bin/onlinechanged:
      1. /var/tmp/onlinechanged (compatibility to old behaviour)
      2. /etc/onlinechanged/*   (new AVM behaviour)
      3. /tmp/flash/onlinechanged/*
      If a package needs actions on changes of online status create a script
      make/$package/files/root/etc/onlinechanged/$action_$package.
    * New hook to add files/directories to var.tar
     * Put desired files/directories into make/{package}/files/var.tar
    * modlibrc:
     * modlib_status now supports "inetd"
     * modlib_startdaemon takes care of the returnvalue, creates pid-file & writes "Starting..."
     * modlib_start checks if the daemon is yet started or disabled
     * modlib_reload & modlib_startdaemon executes "config"-function of parent rc-skript (if available)