@@ -17,14 +17,14 @@ KERNEL_TOOLCHAIN_MD5:=$(KERNEL_TOOLCHAIN_MD5_$(TARGET_ARCH)_$(KERNEL_TOOLCHAIN_G
 KERNEL_TOOLCHAIN_VERSION:=0.1
 KERNEL_TOOLCHAIN_SOURCE:=$(TARGET_ARCH)_gcc-$(KERNEL_TOOLCHAIN_GCC_VERSION)-$(KERNEL_TOOLCHAIN_VERSION).tar.lzma
 
-TARGET_TOOLCHAIN_MD5_mips_4.4.5_0.9.29:=b40dd51ca325a15bc0c3eab8dc33e6ed
-TARGET_TOOLCHAIN_MD5_mips_4.4.5_0.9.30.3:=86b2e8e511a55df95cf11a0e9aeed2e2
-TARGET_TOOLCHAIN_MD5_mipsel_4.4.5_0.9.28:=31d29c580c82f939392227096abfba0b
-TARGET_TOOLCHAIN_MD5_mipsel_4.4.5_0.9.29:=f93fe7009d65b948fd6c9dae6f3d489e
+TARGET_TOOLCHAIN_MD5_mips_4.4.5_0.9.29:=c5d933a486ac377787a2aa654b0663ad
+TARGET_TOOLCHAIN_MD5_mips_4.4.5_0.9.30.3:=18443b7ac1df32b45e989e995a30a4c3
+TARGET_TOOLCHAIN_MD5_mipsel_4.4.5_0.9.28:=fdfcf54781aa4b254817e4da1a03a057
+TARGET_TOOLCHAIN_MD5_mipsel_4.4.5_0.9.29:=9de331245c5b67a8855590f2346cd40a
 TARGET_TOOLCHAIN_MD5:=$(TARGET_TOOLCHAIN_MD5_$(TARGET_ARCH)_$(TARGET_TOOLCHAIN_GCC_VERSION)_$(TARGET_TOOLCHAIN_UCLIBC_VERSION))
 
-TARGET_TOOLCHAIN_VERSION:=0.1
-TARGET_TOOLCHAIN_SOURCE:=$(TARGET_ARCH)_gcc-$(TARGET_TOOLCHAIN_GCC_VERSION)_uClibc-$(TARGET_TOOLCHAIN_UCLIBC_VERSION)-$(TARGET_TOOLCHAIN_VERSION).tar.lzma
+TARGET_TOOLCHAIN_VERSION:=0.2
+TARGET_TOOLCHAIN_SOURCE:=$(TARGET_ARCH)_gcc-$(TARGET_TOOLCHAIN_GCC_VERSION)_uClibc-$(TARGET_TOOLCHAIN_UCLIBC_VERSION)-freetz-$(TARGET_TOOLCHAIN_VERSION).tar.lzma
 
 $(KERNEL_TOOLCHAIN_DIR):
 	@mkdir -p $@
