@@ -18,6 +18,8 @@ Latest changes:
    + Add uClibc-0.9.30.3 and uClibc-0.9.31 (experimental)
    + Add gdb-6.8, delete outdated versions
    + Update download toolchains to gcc-3.4.6 (kernel) and gcc-4.4.5 (target)
+    + Remove kernel headers from download toolchains
+   + Add install target for kernel headers
    + Update sys/queue.h in uClibc-0.9.28 toolchains
    + Enable mips-plt optimizations for gcc versions >= 4.4. These optimizations
      allow gcc to create binaries which are significantly smaller in size.
